💄 Fix Bottom Border on iOS

--- a/front/components/PeriodicTableContainer/PeriodicTable/SearchBarContainer/SearchBar/style.css
+++ b/front/components/PeriodicTableContainer/PeriodicTable/SearchBarContainer/SearchBar/style.css
@@ -9,6 +9,7 @@
 .searchBar {
   -webkit-appearance: none;
   border: none;
+  border-radius: 0;
   background: var(--colours-blue-dark);
   height: 1.75rem;
   width: 16rem;
